Una buena practica seria tener por separado el repositorio en un proyecto aparte, mas en la misma capa DAL tendermos la definicion e implementacion del Repository. Esta implemnetacion hara uso de la interfaz IRepository y el acceso a EF 6 con la clase DbContext

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     <None Include="..\EntitiesStandart\Products.cs">
       <DependentUpon>NWindDBModel.tt</DependentUpon>
     </None>
+    <Compile Include="EFRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="NWindDBModel.Context.cs">
       <AutoGen>True</AutoGen>
