Creamos RepositoryFactory. Por medio de esta clase expondemos la logica de negocio. Esta clase creara el repositorio especifico que vayamos necesitando o la fuente de datos que requiramos.

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RepositoryFactory.cs" />
     <None Include="..\EntitiesStandart\Categories.cs">
       <DependentUpon>NWindDBModel.tt</DependentUpon>
     </None>
