Se hizo una correcta redaccion de la cadena de conexion en el test. Y agregamos una categoria y un producto.

--- a/TestConsola/App.config
+++ b/TestConsola/App.config
@@ -10,9 +10,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
   <connectionStrings>
-    <add name="TestConsola.Properties.Settings.connectionStr"
-      connectionString="Data Source=SCDT-JOSUER\SQL_DESARROLLO;Initial Catalog=NWind;Persist Security Info=True;User ID=sa;Password=Altahir"
-      providerName="System.Data.SqlClient"/>
+    <add name="NWindEntities"
+   connectionString="metadata=res://*/NWindDBModel.csdl|res://*/NWindDBModel.ssdl|res://*/NWindDBModel.msl;provider=System.Data.SqlClient;
+   provider connection string=&quot;data source=SCDT-JOSUER\SQL_DESARROLLO;initial catalog=NWind;persist security info=True;
+   user id=sa;password=Altahir;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
