Agregamos la clase proxy, esta debera agregar las referencias al proyecto SLC y Entities. Ademas de definir cual sera la direccion base del servicio.

--- a/NWindProxyService/NWindProxyService.csproj
+++ b/NWindProxyService/NWindProxyService.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EntitiesStandart\EntitiesStandart.csproj" />
+    <ProjectReference Include="..\SLC\SLC.csproj" />
+  </ItemGroup>
+
 </Project>
