--- a/NWind.MVCCPLS/NWind.MVCCPLS.csproj
+++ b/NWind.MVCCPLS/NWind.MVCCPLS.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -112,6 +115,16 @@
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EntitiesStandart\EntitiesStandart.csproj">
+      <Project>{b82777d6-c458-4088-b896-05a68d39b767}</Project>
+      <Name>EntitiesStandart</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NWindProxyService\NWindProxyService.csproj">
+      <Project>{ed2a16db-e50a-46fc-b006-08694c662f09}</Project>
+      <Name>NWindProxyService</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
