--- a/NWind.MVCCPLS/NWind.MVCCPLS.csproj
+++ b/NWind.MVCCPLS/NWind.MVCCPLS.csproj
@@ -106,6 +106,7 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ProductList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
