Diseñamos el formulario para obtener los datos necesarios del modelo productos mas tres botones con la funcionalidad de CUD, crear,actualizar y borrar

--- a/NWind.MVCCPLS/NWind.MVCCPLS.csproj
+++ b/NWind.MVCCPLS/NWind.MVCCPLS.csproj
@@ -108,6 +108,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ProductList.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\CUD.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
