--- a/NWind.MVCCPLS/Web.config
+++ b/NWind.MVCCPLS/Web.config
@@ -40,4 +40,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="NWindEntities" connectionString="metadata=res://*/NWindDBModel.csdl|res://*/NWindDBModel.ssdl|res://*/NWindDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCDT-JOSUER\SQL_DESARROLLO;initial catalog=NWind;persist security info=True;user id=sa;password=Altahir;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
