test de todas las funciones crud pero usando directamente la capa de logica de negocios

--- a/NWind.MVCCPLS/Web.config
+++ b/NWind.MVCCPLS/Web.config
@@ -48,8 +48,9 @@
   </system.codedom>
   <connectionStrings>
     <add name="NWindEntities"
-      connectionString="metadata=res://*/NWindDBModel.csdl|res://*/NWindDBModel.ssdl|res://*/NWindDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCDT-JOSUER\SQL_DESARROLLO;initial catalog=NWind;persist security info=True;user id=sa;password=Altahir;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient"/>
+   connectionString="metadata=res://*/NWindDBModel.csdl|res://*/NWindDBModel.ssdl|res://*/NWindDBModel.msl;provider=System.Data.SqlClient;
+   provider connection string=&quot;data source=SCDT-JOSUER\SQL_DESARROLLO;initial catalog=NWind;persist security info=True;
+   user id=sa;password=Altahir;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
