--- a/NWind.ViewModel/NWind.ViewModel.csproj
+++ b/NWind.ViewModel/NWind.ViewModel.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EntitiesStandart\EntitiesStandart.csproj" />
+    <ProjectReference Include="..\NWindProxyService\NWindProxyService.csproj" />
+  </ItemGroup>
+
 </Project>
