--- a/NWind.XamarinApp/NWind.XamarinApp.UWP/NWind.XamarinApp.UWP.csproj
+++ b/NWind.XamarinApp/NWind.XamarinApp.UWP/NWind.XamarinApp.UWP.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{FBAFA065-10AB-474F-85FD-9CAA585D8AAD}</ProjectGuid>
+    <ProjectGuid>{8E2C56CF-CB42-4EAF-8883-C2E9CE125819}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NWind.Xamarin.UWP</RootNamespace>
-    <AssemblyName>NWind.Xamarin.UWP</AssemblyName>
+    <RootNamespace>NWind.XamarinApp.UWP</RootNamespace>
+    <AssemblyName>NWind.XamarinApp.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
@@ -148,9 +148,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NWind.Xamarin\NWind.Xamarin.csproj">
-      <Project>{7DE06936-6F41-4991-AAFC-27B34F76146D}</Project>
-      <Name>NWind.Xamarin</Name>
+    <ProjectReference Include="..\NWind.XamarinApp\NWind.XamarinApp.csproj">
+      <Project>{8232048A-C6B6-4A7A-AD0E-860D98B9F3E0}</Project>
+      <Name>NWind.XamarinApp</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
