--- a/NWind.XamarinApp/NWind.XamarinApp.iOS/Info.plist
+++ b/NWind.XamarinApp/NWind.XamarinApp.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>NWind.Xamarin</string>
+    <string>NWind.XamarinApp</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.NWind.Xamarin</string>
+    <string>com.companyname.NWind.XamarinApp</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>NWind.Xamarin</string>
+    <string>NWind.XamarinApp</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
