--- a/NWind.XamarinApp/NWind.XamarinApp/NWind.XamarinApp.csproj
+++ b/NWind.XamarinApp/NWind.XamarinApp/NWind.XamarinApp.csproj
@@ -19,4 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\NWind.ViewModel\NWind.ViewModel.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="CUD.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
